--- a/css/master.css
+++ b/css/master.css
@@ -41,7 +41,7 @@ a{
 }
 
 .section{
-    padding: 80px;
+    padding: 200px;
     background-color: #96c8e4;
     width: 100%;
     min-width: max-content;
@@ -59,7 +59,7 @@ a{
 
 .relative{
     position: relative;
-    top: 40px;
+    top: -76px;
 }
 
 h1{
@@ -88,9 +88,10 @@ p{
 }
 
 .section1{
-    padding: 155px;
+    padding: 280px;
     width: 100%;
     min-width: max-content;
+    padding-bottom: 0px;
 }
 
 .container-young{
@@ -121,6 +122,7 @@ h2{
 .head-pacchetto{
     text-align: center;
     border: solid 1px rgba(130, 130, 130, 0.5);
+    padding: 7px;
 }
 
 .col-text{
@@ -158,4 +160,57 @@ hr{
 .col-contattaci{
     width: 180px;
     display: inline-block;
+}
+
+.col-lateral-text{
+    padding-left: 50px;
+    padding-top: 75px;
+}
+
+.small-botton{
+    background-color: #ffffff;
+    padding: 5px 7px;
+    color: black;
+    max-width: 185px;
+    margin-bottom: 25px;
+    display: inline-block;
+    border: solid 1px black
+}
+
+.col-text-img{
+    padding: 30px 20px;
+}
+
+.col-container-img{
+    display: inline-block;
+}
+
+.vacat-square{
+    width: 200px;
+    height: 200px;
+}
+
+.section3{
+    display: flex;
+    flex-basis: calc(100% / 3);
+}
+
+.giant-square{
+    width: calc(1512px / 3);
+    height: 504px;
+}
+
+.small-img-square{
+    width: calc( 504px / 2 );
+    height: calc( 504px / 2 );
+    object-fit: contain;
+    padding: 50px;
+    filter: invert(1);
+}
+
+.giant-square-inside{
+    height: 504px;
+    width: 504px;
+    display: flex;
+    flex-wrap: wrap;
 }
